# Chemvas

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  RELEASING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: main.py
app/chemvas/: __init__.py  __main__.py  branding.py  file_open.py  main.py
app/chemvas/adapters/: __init__.py
app/chemvas/adapters/qt/: __init__.py  file_open_events.py
app/chemvas/bootstrap/: application.py  file_open.py  main_window.py  main_window_runtime.py  main_window_services.py  window_registry.py
app/chemvas/core/: bond_tool_logic.py  document_io.py  history.py  molfile.py  rdkit_adapter.py  rdkit_conversion.py  rdkit_import.py  renderer.py  style_acs1996.py  svg_roundtrip.py  template_geometry.py  text_tool_logic.py  tool_overlay_logic.py
app/chemvas/domain/: __init__.py
app/chemvas/domain/document/: __init__.py  model.py  state.py
app/chemvas/domain/transactions/: __init__.py  bound_attribute.py  history_authority.py  outcome.py  recovery.py
app/chemvas/features/: __init__.py
app/chemvas/features/annotations/: __init__.py  brackets.py  label_layout.py  note_html.py  shape_geometry.py
app/chemvas/features/export/: __init__.py  dialog.py  painting.py  plan.py  raster.py  scope.py  service.py  vector.py
app/chemvas/features/hover/: __init__.py
app/chemvas/features/insertion/: __init__.py  ring_occupancy.py  smiles.py  structure_growth.py  structure_payload.py  template.py  template_preview.py
app/chemvas/shell/: __init__.py  main_window.py
app/chemvas/ui/: app_data_paths.py  atom_coords_access.py  atom_label_access.py  atom_label_history_recorder.py  atom_label_merge_service.py  atom_label_service.py  benzene_preview_access.py  benzene_preview_renderer.py  benzene_preview_scene_access.py  benzene_preview_service.py  benzene_tool.py  bond_geometry_update_service.py  bond_graphics_access.py  bond_graphics_build_service.py  bond_graphics_draw_service.py  bond_graphics_factory.py  bond_hover_preview_service.py  bond_label_geometry_access.py  bond_length_graphics_refresh.py  bond_line_geometry_service.py  bond_preview_access.py  bond_preview_geometry.py  bond_preview_renderer.py  bond_preview_scene_items.py  bond_renderer.py  bond_renderer_access.py  bond_ring_double_geometry_service.py  bond_tool.py  canvas_arrow_build_service.py  canvas_atom_graphics_state.py  canvas_atom_mutation_service.py  canvas_auxiliary_service_bundle.py  canvas_background_painter.py  canvas_bond_graphics_state.py  canvas_bond_mutation_service.py  canvas_bond_renderer_state.py  canvas_callback_state.py  canvas_chemdraw_shortcut_service.py  canvas_color_mutation_service.py  canvas_delete_transaction.py  (+278 more)
app/core/: delete_tool_logic.py  document_io.py  document_state.py  history.py  model.py  molfile.py  perspective_drag_logic.py  rdkit_adapter.py  rdkit_conversion.py  rdkit_import.py  rdkit_types.py  renderer.py  style_acs1996.py  style_presets.py  svg_roundtrip.py  template_geometry.py  text_tool_logic.py  tool_overlay_logic.py  tools.py  xtb_adapter.py
app/ui/: active_tool_reference.py  app_data_paths.py  atom_coords_access.py  atom_label_access.py  atom_label_history_recorder.py  atom_label_merge_service.py  atom_label_ports.py  atom_label_service.py  benzene_preview_access.py  benzene_preview_ports.py  benzene_preview_renderer.py  benzene_preview_scene_access.py  benzene_preview_service.py  benzene_tool.py  bond_dotted_geometry.py  bond_geometry_primitives.py  bond_geometry_update_service.py  bond_graphics_access.py  bond_graphics_build_service.py  bond_graphics_draw_service.py  bond_graphics_factory.py  bond_graphics_logic.py  bond_hover_preview_service.py  bond_label_geometry_access.py  bond_length_graphics_refresh.py  bond_line_geometry_service.py  bond_preview_access.py  bond_preview_geometry.py  bond_preview_renderer.py  bond_renderer.py  bond_renderer_access.py  bond_ring_double_geometry_service.py  bond_style_logic.py  bond_tool.py  bracket_types.py  canvas_arrow_build_service.py  canvas_atom_graphics_state.py  canvas_atom_mutation_service.py  canvas_auxiliary_service_bundle.py  canvas_background_painter.py  (+351 more)
docs/: ARCHITECTURE.ko.md  ARCHITECTURE.md  architecture.md  refactoring_test_coverage_report.md
docs/adr/: 0001-feature-oriented-modularization.md  0002-single-rollback-kernel.md
docs/images/: README.md
examples/: README.md  template1.chemvas  template2.chemvas
packaging/: README.md  chemvas.spec
packaging/icons/: chemvas.icns
packaging/linux/: chemvas.desktop  chemvas.xml
scripts/: generate_branding_images.py  generate_icons.py  verify_wheel.py
tests/: conftest.py  runtime_services.py  test_active_tool_reference.py  test_app_data_paths.py  test_architecture_boundaries.py  test_atom_coords_access.py  test_atom_label_access.py  test_atom_label_ports.py  test_atom_label_service.py  test_benzene_preview_renderer.py  test_benzene_preview_service.py  test_bond_dotted_geometry.py  test_bond_graphics_logic.py  test_bond_hover_preview_service.py  test_bond_preview_access.py  test_bond_preview_geometry.py  test_bond_preview_policy.py  test_bond_preview_renderer.py  test_bond_renderer_unit.py  test_bond_stereo_geometry.py  test_bond_style_logic.py  test_bond_tool_logic.py  test_canvas_arrow_build_service.py  test_canvas_atom_graphics_state.py  test_canvas_atom_mutation_service.py  test_canvas_auxiliary_service_bundle.py  test_canvas_background_painter.py  test_canvas_bond_graphics_state.py  test_canvas_bond_mutation_service.py  test_canvas_bond_renderer_state.py  test_canvas_chemdraw_shortcut_service.py  test_canvas_color_mutation_service.py  test_canvas_document_groups.py  test_canvas_document_service_bundle.py  test_canvas_document_session_service.py  test_canvas_document_state.py  test_canvas_format_access.py  test_canvas_geometry_controller.py  test_canvas_geometry_logic.py  test_canvas_geometry_ports.py  (+293 more)
(+23 files in other folders)
