[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemvas"
version = "0.1.0"
description = "A PyQt-based chemical drawing canvas."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Pillow>=10",
    "PyQt6>=6.7",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7",
    "mypy>=1.19",
    "pytest>=8",
    "ruff>=0.8",
]
rdkit = [
    "rdkit>=2024.9",
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["app"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
mypy_path = "app"
files = ["app/core"]
warn_unused_ignores = true
