[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemvas"
version = "0.1.0"
description = "A PyQt-based chemical drawing canvas."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Pillow>=10",
    "PyQt6>=6.7",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7",
    "mypy>=1.19",
    "pytest>=8",
    "ruff>=0.8",
]
rdkit = [
    "rdkit>=2024.9",
]

[project.scripts]
chemvas = "chemvas.main:main"

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["app"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
mypy_path = "app"
files = ["app/core", "app/ui"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["rdkit", "rdkit.*"]
ignore_missing_imports = true

# Incremental typing backlog. Every other app/ui module is type-checked and
# enforced; these are the not-yet-clean modules. Shrink this list as modules
# are fixed — do not add to it.
[[tool.mypy.overrides]]
module = [
    "ui.bond_graphics_draw_service", "ui.bond_renderer", "ui.canvas_history_recording_service",
    "ui.canvas_note_controller", "ui.canvas_rotation_preview_controller", "ui.edit_tools",
    "ui.graphics_items", "ui.history_recording_access", "ui.hover_service_bundle",
    "ui.main_window_tool_routing_service", "ui.main_window_toolbar_logic", "ui.scene_item_restore",
    "ui.scene_single_item_mutation_logic", "ui.scene_transform_apply_logic", "ui.scene_transform_controller",
    "ui.select_tool", "ui.selection_collection_access", "ui.selection_drag_tool",
    "ui.selection_info_access", "ui.structure_build_committer", "ui.structure_growth_build_service",
    "ui.structure_insert_access", "ui.structure_payload_access", "ui.template_geometry_resolver_service",
    "ui.template_insert_logic", "ui.text_tool",
]
ignore_errors = true
