[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemvas"
dynamic = ["version"]
description = "A PyQt-based chemical drawing canvas."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10",
    "PyQt6>=6.7",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7",
    "mypy>=1.19",
    "pytest>=8",
    "ruff>=0.8",
]
rdkit = [
    "rdkit>=2024.9",
]

[project.scripts]
chemvas = "chemvas.bootstrap.application:main"

[tool.setuptools.dynamic]
version = { attr = "chemvas.__version__" }

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["app"]
include = ["chemvas*"]
namespaces = false

[tool.setuptools.package-data]
chemvas = ["assets/icon/*.svg", "assets/icon/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["app"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "C901", "UP", "RUF012", "RUF021", "RUF022", "RUF046"]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.per-file-ignores]
# RUF012: test doubles use mutable class attributes as shared recording state.
"tests/*.py" = ["E402", "RUF012"]

[tool.mypy]
python_version = "3.12"
mypy_path = "app"
files = ["app/chemvas"]
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["rdkit", "rdkit.*"]
ignore_missing_imports = true

# New architectural owners are held to mypy's full strict profile. Legacy
# ``chemvas.core`` / ``chemvas.ui`` modules remain on the project-wide gradual
# settings until their feature slice moves behind one of these public APIs.
[[tool.mypy.overrides]]
module = [
    "chemvas.domain.*",
    "chemvas.features.*",
    "chemvas.shell.*",
    "chemvas.adapters.*",
    "chemvas.bootstrap.*",
]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
implicit_reexport = false
strict_equality = true
warn_return_any = true

# chemvas.core.rdkit_adapter carries a type: ignore for rdkit-stubs' missing
# RDLogger.DisableLog. Without rdkit installed (CI) the module is Any and the
# ignore would be flagged as unused, so skip that warning for this module only.
[[tool.mypy.overrides]]
module = ["chemvas.core.rdkit_adapter"]
warn_unused_ignores = false
